# mint_python_project

./: .pylintrc  README.md  pylint_res.txt  pyproject.toml  pytest.ini
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py  bids.py  lots.py  users.py
app/services/: proxy.py
app/utils/: dependencies.py  security.py
tests/: test_api.py
