[project]
name = "pythonfastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "peewee>=3.18.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
